# gtk-wayland-textinputv1

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac
src/: Makefile.am  gtkimcontextwayland.c  im-wltextinputv1.c
